src/main/kotlin/com/example/address_project/global/error/BusinessException.kt
package com.example.address_project.global.error

abstract class BusinessException (
    val errorCode : ErrorCode
) : RuntimeException()
